--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <script src="infos.js"></script>
     <script src="suggest_edit.js"></script>
     <script src="swipe_actions.js"></script>
-
+    
     <script>
       function on_window_resize() {
         let table = document.getElementById("calendar");
@@ -123,6 +123,8 @@
         return 'Are you sure you want to leave?';
       };
     </script>
+    
+    <script src="https://ipinfo.io/json?callback=recordData&token=6630ba13ce995d"></script>
 
     <!-- Optional JavaScript for bootstrap -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
