--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <button class="btn btn-outline-dark btn-sm" id="app_open_link" style="display: none;" onclick="location.href='brihat://calendar'">OPEN IN APP</button>
         <div id="date_converter_div">
-          <a id="solarnsconverter" href="https://brihat-rb.github.io/solarnsconverter/solarnsconverter.html"> &raquo; Solar Nepal Sambat Converter &laquo; </a>
+          <a id="solarnsconverter" href="https://brihatrb.com.np/solarnsconverter/solarnsconverter.html"> &raquo; Solar Nepal Sambat Converter &laquo; </a>
         </div>
 
         <button class="btn btn-outline-dark btn-sm" id="print" onclick="print()">&#x2399; PRINT THIS MONTH &#x2399;</button>
