--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta name="theme-color" content="#ffa500">
   <link rel="manifest" href="./manifest.json">
   <link rel="apple-touch-icon" href="logo.svg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
 </head>
 
 <body onbeforeunload="return on_unload()">
