--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./index.css" />
   <link rel="stylesheet" href="./index_cal_conv.css" />
   <link rel="stylesheet" href="./index_details.css" />
+  <link rel="stylesheet" href="./parvas.css" />
   <link rel="icon" href="logo.svg">
   <meta name="theme-color" content="#ffa500">
   <link rel="manifest" href="./manifest.json">
@@ -18,6 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Laila&display=swap" rel="stylesheet">
 </head>
 
 <body onbeforeunload="return on_unload()">
@@ -32,6 +34,8 @@
           <tbody align="center" id="calendar-body"></tbody>
         </table>
 
+        <!-- added on 2022 OCT 24 to display event list under calendar (different for each calendar view) -->
+        <div id="parvas" style="display: none;"></div>
 
         <div id="prev_today_next" class="form-inline">
           <button class="btn btn-outline-dark btn-sm" id="previous" onclick="previous()">&laquo; PREV </button>&nbsp;
@@ -105,6 +109,7 @@
     <script src="AD_BS.js"></script>
     <script src="public_holidays.js"></script>
     <script src="index.js"></script>
+    <script src="parvas.js"></script>
     <script src="index_cal_conv.js"></script>
     <script src="index_details.js"></script>
     <script src="infos.js"></script>
