--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <ul id="preferences_list" class="list-unstyled">
         <li>Show/Hide Components</li>
         <hr class="gear_hr" />
-        <li><input type="checkbox" id="check_all" onchange="toggle_all()" checked autocomplete="off"/><label for="check_all">&nbsp;Show All Components</label></li>
+        <li><input type="checkbox" id="check_all" onchange="toggle_all()" autocomplete="off"/><label for="check_all">&nbsp;Show All Components</label></li>
         <li><input type="checkbox" id="check_tithis" onchange="toggle_tithis()" checked autocomplete="off"/><label for="check_tithis">&nbsp;Show Tithis</label></li>
         <li><input type="checkbox" id="check_info_box" onchange="toggle_info_box()" autocomplete="off"/><label for="check_info_box">&nbsp;Show Event Info Box</label></li>
         <li><input type="checkbox" id="check_converter_link" onchange="toggle_converter_link()" autocomplete="off"/><label for="check_converter_link">&nbsp;Show Date Converter Link</label></li>
