Update Google Analytics

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Laila&display=swap" rel="stylesheet">
 </head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99TBHKPHDP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99TBHKPHDP');
+</script>
 
 <body onbeforeunload="return on_unload()">
   <main>
@@ -186,7 +196,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.1/sweetalert.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-99TBHKPHDP"></script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-99TBHKPHDP"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
 
@@ -199,7 +209,7 @@
         cookie_domain: 'brihat-rb.github.io',
         cookie_flags: 'SameSite=None;Secure',
       });
-    </script>
+    </script> -->
 
     <script>
       if ("serviceWorker" in navigator) {
