update README and fix

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="parvas" style="display: none;"></div>
 
         <!-- added on 2023 FEB 19 to display public holiday list under AD and Solar Nepal Sambat Calendar -->
-        <div id="public_holiday_box" style=""></div>
+        <div id="public_holiday_box"></div>
 
         <div id="prev_today_next" class="form-inline">
           <button class="btn btn-outline-dark btn-sm" id="previous" onclick="previous()">&laquo; PREV </button>&nbsp;
