--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="./public_holidays.css" />
-  <link rel="stylesheet" href="./index.css" />
-  <link rel="stylesheet" href="./index_cal_conv.css" />
-  <link rel="stylesheet" href="./index_details.css" />
-  <link rel="stylesheet" href="./parvas.css" />
-  <link rel="stylesheet" href="./settings.css" />
-  <link rel="stylesheet" href="./muhoortta.css" />
-  <link rel="icon" href="logo.svg">
+  <link rel="stylesheet" href="./css/public_holidays.css" />
+  <link rel="stylesheet" href="./css/index.css" />
+  <link rel="stylesheet" href="./css/index_cal_conv.css" />
+  <link rel="stylesheet" href="./css/index_details.css" />
+  <link rel="stylesheet" href="./css/parvas.css" />
+  <link rel="stylesheet" href="./css/settings.css" />
+  <link rel="stylesheet" href="./css/muhoortta.css" />
+  <link rel="icon" href="./assets/logo.svg">
   <meta name="theme-color" content="#ffa500">
   <link rel="manifest" href="./manifest.json">
-  <link rel="apple-touch-icon" href="logo.svg">
+  <link rel="apple-touch-icon" href="./assets/logo.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet"> -->
@@ -154,20 +154,20 @@
     <!-- <button name="jump" onclick="jump()">Go</button> -->
 
     <!-- Custom Scripts -->
-    <script src="NS.js"></script>
-    <script src="NS_AD.js"></script>
-    <script src="NS_BS.js"></script>
-    <script src="AD_BS.js"></script>
-    <script src="public_holidays.js"></script>
-    <script src="muhoortta.js"></script>
-    <script src="parvas.js"></script>
-    <script src="index.js"></script>
-    <script src="index_cal_conv.js"></script>
-    <script src="index_details.js"></script>
-    <script src="infos.js"></script>
-    <script src="suggest_edit.js"></script>
-    <script src="swipe_actions.js"></script>
-    <script src="settings.js"></script>
+    <script src="./js/base/NS.js"></script>
+    <script src="./js/base/NS_AD.js"></script>
+    <script src="./js/base/NS_BS.js"></script>
+    <script src="./js/base/AD_BS.js"></script>
+    <script src="./js/addons/public_holidays.js"></script>
+    <script src="./js/addons/muhoortta.js"></script>
+    <script src="./js/addons/parvas.js"></script>
+    <script src="./js/calendar/index.js"></script>
+    <script src="./js/calendar/index_cal_conv.js"></script>
+    <script src="./js/calendar/index_details.js"></script>
+    <script src="./js/addons/infos.js"></script>
+    <script src="./js/addons/suggest_edit.js"></script>
+    <script src="./js/addons/swipe_actions.js"></script>
+    <script src="./js/settings.js"></script>
     
     <script>
       function on_window_resize() {
