added arrow key press trigger and supporting functions

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
     <script src="./js/addons/infos.js"></script>
     <script src="./js/addons/suggest_edit.js"></script>
     <script src="./js/addons/swipe_actions.js"></script>
+    <script src="./js/addons/keypress_actions.js"></script>
     <script src="./js/settings.js"></script>
     
     <script>
