--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Laila&display=swap" rel="stylesheet">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VPYN9860PL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VPYN9860PL');
+</script>
   
 <body onbeforeunload="return on_unload()" onload="loading_anim();">
   <div id="loading">
@@ -205,16 +215,6 @@
       function loading_anim() {
         document.getElementById('loading').style.display = "none";
       }
-    </script>
-    
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-99TBHKPHDP"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-99TBHKPHDP');
     </script>
 
     <script>
