--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
   <meta charset="UTF-8">
   <title>Brihat Calendar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+  <meta property="og:title" content="Brihat Calendar" />
+  <meta property="og:image" content="./assets/brihat_calendar.png" />
+  <meta property="og:type" content="calendar" />
+  <meta property="og:site_name" content="Brihat Calendar" />
+  <meta property="og:url" content="https://calendar.brihatrb.com.np" />
+  <meta property="og:description" content="Brihat Calendar" />
+  
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@Brihat9" />
+  <meta name="twitter:title" content="Brihat Calendar" />
+  <meta name="twitter:description" content="Bikram Sambat, Anno Domini and Solar Nepal Sambat Calendar (proposed) with Lunar (Pakshya), National, International Events Information and Muhoorttas, Nepalese Public Holidays" />
+  <meta name="twitter:image" content="./assets/brihat_calendar.png" />
+  <meta name="twitter:image:alt" content="Brihat Calendar" />
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="./css/public_holidays.css" />
