addons: highlight event in calendar: 2080.04.30

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
     <script src="./js/base/NS_AD.js"></script>
     <script src="./js/base/NS_BS.js"></script>
     <script src="./js/base/AD_BS.js"></script>
+    <script src="./js/addons/utils.js"></script>
     <script src="./js/addons/public_holidays.js"></script>
     <script src="./js/addons/muhoortta.js"></script>
     <script src="./js/addons/parvas.js"></script>
