--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
     <script>
       function loading_anim() {
         document.getElementById('loading').style.display = "none";
+        init_anim();
       }
     </script>
 
