--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       on_window_resize()
 
       function on_unload() {
-        return 'Are you sure you want to leave?';
+        // return 'Are you sure you want to leave?';
       };
     </script>
     
@@ -230,7 +230,7 @@
     <script>
       function loading_anim() {
         document.getElementById('loading').style.display = "none";
-        init_anim();
+        // init_anim();
       }
     </script>
 
