--- a/lunar_events.html
+++ b/lunar_events.html
@@ -75,8 +75,7 @@
         <th class="text-center" title="द्वादशी" scope="col">द्वादशी</th>
         <th class="text-center" title="त्रयोदशी" scope="col">त्रयोदशी</th>
         <th class="text-center" title="चतुर्दशी" scope="col">चतुर्दशी</th>
-        <th class="text-center" title="औंसी" scope="col">औंसी</th>
-        <th class="text-center" title="पूर्णिमा" scope="col">पूर्णिमा</th>
+        <th class="text-center" title="औंसी" scope="col">औंसी / पूर्णिमा</th>
       </tr>
     </thead>
     <tbody id="table_body"></tbody>
@@ -99,12 +98,11 @@
         <th class="text-center" scope="col">द्वादशी</th>
         <th class="text-center" scope="col">त्रयोदशी</th>
         <th class="text-center" scope="col">चतुर्दशी</th>
-        <th class="text-center" scope="col">औंसी</th>
-        <th class="text-center" scope="col">पूर्णिमा</th>
+        <th class="text-center" scope="col">औंसी / पूर्णिमा</th>
       </tr>
       <tr>
         <td colspan="6" class="text-center">Compiled By Brihat Ratna Bajracharya</td>
-        <td colspan="6" class="text-center">May not be 100 % accurate</td>
+        <td colspan="5" class="text-center">May not be 100 % accurate</td>
         <td colspan="6" class="text-center">reachme@brihatrb.com.np</td>
       </tr>
     </tfoot>
