--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   <link rel="apple-touch-icon" href="./assets/logo.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Laila&display=swap" rel="stylesheet">
 </head>
@@ -63,16 +62,18 @@
         <div class="clock">
           <span class="ticks" style="--ticks:5"><b>&middot;</b></span>
           <span class="ticks" style="--ticks:10"><b>&middot;</b></span>
-          <span class="ticks" style="--ticks:15"><b>3</b></span>
+          <span class="ticks num" style="--ticks:15"><b>3</b></span>
           <span class="ticks" style="--ticks:20"><b>&middot;</b></span>
           <span class="ticks" style="--ticks:25"><b>&middot;</b></span>
-          <span class="ticks" style="--ticks:30"><b>6</b></span>
+          <span class="ticks num" style="--ticks:30"><b>6</b></span>
           <span class="ticks" style="--ticks:35"><b>&middot;</b></span>
           <span class="ticks" style="--ticks:40"><b>&middot;</b></span>
-          <span class="ticks" style="--ticks:45"><b>9</b></span>
+          <span class="ticks num" style="--ticks:45"><b>9</b></span>
           <span class="ticks" style="--ticks:50"><b>&middot;</b></span>
           <span class="ticks" style="--ticks:55"><b>&middot;</b></span>
-          <span class="ticks" style="--ticks:00"><b>12</b></span>
+          <span class="ticks num" style="--ticks:00"><b>12</b></span>
+
+          <div id="timetype">---</div>
     
           <div class="hand iniani" id="clockyear"><i></i></div>
     
